CheckManagerTest compatible with Java 8
Replace usage of `List.of` (Java 9+) with `Collections.singletonList`
(Java 1.3+)